--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@
 .DS_Store
 .sass-cache
 build/
-site/engine/client_secret.json
+site/calendar/client_secret.json
+site/source/images/portfolio/img/*.jpg
+site/source/images/portfolio/thumbnails/*.jpg
+site/data/img.yaml
