--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,5 @@ services:
     ports:
      - "80:80"
     volumes:
-     - type: bind
-       source: /assets/img
-       target: /app/source/images/portfolio/img
-     - type: bind
-       source: /assets/thumbnails
-       target: /app/source/images/portfolio/thumbnails
+     - /assets/img:/app/source/images/portfolio/img
+     - /assets/thumbnails:/app/source/images/portfolio/thumbnails
