--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ build/
 site/calendar/client_secret.json
 site/source/images/portfolio/full_size/*.jpg
 site/source/images/portfolio/thumbnails/*.jpg
+**Gemfile.lock
