--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ site/calendar/client_secret.json
 site/source/images/portfolio/full_size/*.jpg
 site/source/images/portfolio/thumbnails/*.jpg
 **Gemfile.lock
+site/build.log
