--- a/site/data/faq_pl.yaml
+++ b/site/data/faq_pl.yaml
@@ -6,7 +6,10 @@ list:
   - question: "Czy mogę się opalać z tatuażem?"
     answer: "Tak, oczywiście. Pamiętaj tylko o tym, że promienie UV, niszczą pigment, dlatego do opalania tatuaży, powinno stosować się krem z filtrem UV50."
   - question: "Czy tatuaż boli?"
-    answer: "Tak, boli. Z tym, że niektórzy lubią ten ból ;). Dużo zależy też od miejsca. <a href='/images/pain_map.jpg' target='_blank'>Spójrz na ten obrazek</a>"
+    answer: "Tak, boli. Z tym, że niektórzy lubią ten ból ;). Dużo zależy też od miejsca."
+    link:
+      info: "Spójrz na ten obrazek"
+      address: "images/site/pain_map.jpg"
   - question: "Jak powinienem się przygotować?"
     answer: "Miejsce pod tatuaż możesz smarować 2 tyg. wcześniej kremem, wtedy pigment wchłonie się lepiej. Zdrowy tryb życia też pomaga. No i nastaw się mentalnie na posiadanie nowej dziarki :)"
   - question: "Czy mogę iść na siłownię po tatuażu?"
