--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 .cache
 .DS_Store
 .sass-cache
+.idea
 build/
+baseimg/Gemfile.lock
+site/Gemfile.lock
 site/calendar/client_secret.json
 site/source/images/portfolio/full_size/*.jpg
 site/source/images/portfolio/thumbnails/*.jpg
