--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,8 @@
 .sass-cache
 .idea
 build/
-baseimg/Gemfile.lock
-site/Gemfile.lock
 site/calendar/client_secret.json
+site/source/images/portfolio/img/*.jpg
 site/source/images/portfolio/full_size/*.jpg
 site/source/images/portfolio/thumbnails/*.jpg
 **Gemfile.lock
