--- a/site/Gemfile
+++ b/site/Gemfile
@@ -2,7 +2,18 @@ source 'https://rubygems.org'
 
 gem 'middleman', '~> 4.2'
 gem 'middleman-autoprefixer', '~> 2.7'
+gem "middleman-blog"
+
 gem 'tzinfo-data', platforms: [:mswin, :mingw, :jruby]
 gem 'wdm', '~> 0.1', platforms: [:mswin, :mingw]
 gem 'tilt', '~> 2.0.8'
 gem 'haml'
+
+# For feed.xml.builder
+gem "builder", "~> 3.0"
+
+# For markdown
+gem 'redcarpet', '~> 3.3', '>= 3.3.3'
+
+# Summaries for the post
+gem "nokogiri"
